# visiowings

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  MULTI_DOCUMENT_README.md  README.md  SECURITY.md  build_exe.py  feature-debug.md  justfile  mkdocs.yml  noxfile.py  pyinstaller_entry.py  pyproject.toml  release-please-config.json  requirements-debug.txt  requirements.txt  setup.py  visiowings.spec
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build-exe.yml  ci.yml  codeql.yml  docs.yml  publish.yml  release-please.yml  scorecard.yml
docs/: FIXES.md  README.md  RELEASING.md  architecture.md  changelog.md  debugging-guide.md  index.md  manual-testing.md
docs/components/: cli.md  document-manager.md
docs/contributing/: development-environment.md  manual-testing.md  optimization-plan.md  releasing.md  uat.md
docs/getting-started/: codepages.md  configuration.md  installation.md
examples/debug/: Module1.bas  README.md
tests/: __init__.py  _visio_mocks.py  conftest.py  test_bom_detection.py  test_breakpoint_manager.py  test_cli_validation.py  test_com_bridge.py  test_config.py  test_debug_adapter.py  test_document_manager.py  test_document_manager_internals.py  test_encoding.py  test_encoding_hypothesis.py  test_encoding_roundtrip.py  test_exceptions.py  test_file_watcher_debounce.py  test_header_processing.py  test_integration.py  test_logging_setup.py  test_retry.py  test_rubberduck.py  test_update_check.py  test_vba_export_internals.py  test_vba_import_internals.py
tests/uat/: _helpers.py  conftest.py  markers.py  test_visiowings_uat.py
tests/uat/com_helpers/: process.py  vbe.py  visio.py
tests/uat/setup/: fixture_factory.py  office_detect.py  trust_center.py
visiowings/: __init__.py  _logging.py  _retry.py  _update_check.py  cli.py  config.py  document_manager.py  encoding.py  exceptions.py  file_watcher.py  interactive.py  vba_export.py  vba_import.py  visio_connection.py
visiowings/debug/: README.md  __init__.py  breakpoint_manager.py  call_stack.py  callstack_inspector.py  cli.py  com_bridge.py  debug_adapter.py  debug_session.py  error_handler.py  event_monitor.py  variable_inspector.py
